# minecraft-ansible

./: .gitignore  CLAUDE.md  Makefile  README.md  ansible.cfg  minecraft.yml  production_vars.yml.exemple  pyproject.toml
defaults/: main.yml
docker/: Dockerfile
docs/: arquitetura.md  mods.md  onboarding.md
envs/: env_aws.example.yml  env_vm.example.yml
inventories/: docker.yaml  inventory.aws_ec2.yaml  inventory_vm.yml  production.yaml
meta/: main.yml
molecule/default/: molecule.yml
molecule/default/tests/: test_default.py
playbooks/: minecraft.yaml
roles/minecraft/defaults/: main.yml
roles/minecraft/handlers/: main.yml
roles/minecraft/meta/: main.yml
roles/minecraft/molecule/default/: Dockerfile  converge.yml  molecule.yml
roles/minecraft/molecule/default/tests/: test_default.py
roles/minecraft/tasks/: main.yml
roles/minecraft/templates/: minecraft.service.j2
roles/minecraft/vars/: main.yml
tasks/: main.yml
templates/: minecraft.service.j2
vars/: main.yml
